# cpp-verify

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.adoc
docs/: README.in.adoc
include/: verify.hpp
tests/: CMakeLists.txt  pretty-file.h  verify.test.cpp  verify.xfail.cpp
